--- a/Part0_Intro.ipynb
+++ b/Part0_Intro.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "| #       |              Name |             Id |             email |\n",
     "|---------|-------------------|----------------|------------------ |\n",
-    "|Student 1|  [your name here] | [your id here] | [your email here] |\n",
-    "|Student 2|  [your name here] | [your id here] | [your email here] |"
+    "|Student 1|  Hay Elmaliah | 315777433 | hay.e@campus.technion.ac.il |\n",
+    "|Student 2|  Orad Barel | 311288203 | oradbarel@campus.technion.ac.il |"
    ]
   },
   {
